...
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="@{viewmodel.donationDetails.request.bloodType.bloodType}" />

                            <TextView
                                android:id="@+id/requesterName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@id/requestBloodType"
                                app:layout_constraintTop_toTopOf="@id/requestBloodType"
                                android:layout_marginStart="27dp"
                                android:text="@{viewmodel.donationDetails.request.requester.name}"
...
                                android:onClick="@{() -> viewmodel.callPatient(viewmodel.donationDetails.request.requester.phoneNumber)}"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/donateButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintLeft_toLeftOf="@id/requestDetailsCard"
                        app:layout_constraintRight_toRightOf="@id/requestDetailsCard"
                        app:layout_constraintTop_toBottomOf="@id/requestDetailsCard"
...
                        android:text="@string/waiting_confirmation"
                        android:textColor="@color/colorPrimaryDark"
                        android:enabled="@{!viewmodel.isInLoadingState}"
                        android:visibility="@{viewmodel.getWaitingDonationViewVisibility}" />

                    <Button
                        android:id="@+id/cancelDonationButton"
                        app:layout_constraintLeft_toLeftOf="@id/requestDetailsCard"
                        app:layout_constraintRight_toRightOf="@id/requestDetailsCard"
                        app:layout_constraintTop_toBottomOf="@id/waitingConfirmationSentence"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
...
                        android:enabled="@{!viewmodel.isInLoadingState}"
                        android:visibility="@{viewmodel.getWaitingDonationViewVisibility}"
                        android:onClick="@{() -> viewmodel.cancelDonation(viewmodel.donationDetails.request.id)}"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/confirmDonationButton"
                        app:layout_constraintLeft_toLeftOf="@id/requestDetailsCard"
                        app:layout_constraintRight_toRightOf="@id/requestDetailsCard"
                        app:layout_constraintTop_toBottomOf="@id/cancelDonationButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
...
