...
                                            app:autoSizeStepGranularity="2sp"/>

                                    </androidx.constraintlayout.widget.ConstraintLayout>
                                </androidx.cardview.widget.CardView>

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/pendingRequestCard"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
...
                        <include layout="@layout/shimmer_item_request"/>
                        <include layout="@layout/shimmer_item_request"/>
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/requestsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/requestsWord"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="30dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
